--- a/examples/ejs/public/stylesheets/style.css
+++ b/examples/ejs/public/stylesheets/style.css
@@ -1,4 +1,4 @@
 body {
   padding: 50px 80px;
-  font: 14px "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+  font: 14px "Helveticaff Neue", "Lucida Grande", Arial, sans-serif;
 }
